src/component/view/option-edit/style.scss
.main--edit {
    display: grid;
    grid-template-columns: 220px auto;
    height: calc(100% - 60px);

    .text-ipt input {
        padding-right: 70px;
        background-color: transparent;
    }

    &__form {
        padding: 40px;

        // Expand to remaining height
        display: flex;
        flex-direction: column;

        .react-codemirror2,
        .datagrid {
            flex: 1;
        }

        .CodeMirror {
            height: 100%;
        }
        // END- Expand

        .fm-field {
            display: flex;
            justify-content: space-between;
            align-items: center;
            margin-bottom: 45px;

            &:nth-child(2) {
                position: relative;

                .fm-field__ctrl {
                    display: inline-block;
                    position: absolute;
                    top: -3px;
                    right: 0;
                }
            }

            &__label,
            .text-ipt__label {
                font: bold 14px $arial;
                color: $dark-gray-100;
            }

            &__label {
                width: 170px;
            }

            .text-ipt {
                width: 100%;
                grid-template-columns: 170px 1fr;
            }

            .dropdown {
                width: 200px;
            }
        }

        .tab-switch {
            margin-bottom: 20px;
        }
    }

    .datagrid {
        th,
        td {
            @include gen-tb-cells-width( (65, 175, 310, 130, (100, 2), (50, 2)) );   // total: 980px
        }

        &__cell {
            @extend %text-trim-ellipsis;
            display: inline-block;
            vertical-align: middle;

            &--title {
                max-width: 175px;
            }

            &--url {
                max-width: 310px;
            }
        }
    }
}

